<resources>
    <string name="Account_security">Account security</string>
    <string name="Add_Picture">Add Picture</string>
    <string name="Advisory">Advi</string>
    <string name="Alignment">Alignment</string>
    <string name="Animation">Animation</string>
    <string name="Are_you_sure_delete_this_account">Are you sure delete this account ?</string>
    <string name="Auxiliary_function">Button</string>
    <string name="Background">Background</string>
    <string name="Bubble">Bubble</string>
    <string name="ButtonEight">HO</string>
    <string name="ButtonFive">AC</string>
    <string name="ButtonSeven">FL</string>
    <string name="ButtonSix">PU</string>
    <string name="Closetiming">Close timing</string>
    <string name="Code">Code</string>
    <string name="Connect">Conn</string>
    <string name="Crash_Tip">*Recently ncountered a crash problem\nPlease uninstall the app first, \nand then download again</string>
    <string name="DMX">DMX</string>
    <string name="Day">D</string>
    <string name="Delete_account_succeeded">Delete account succeeded</string>
    <string name="Delete_this_account">Delete this account</string>
    <string name="Emoticons_are_not_supported">Emoticons are not supported</string>
    <string name="Experience_Now">Experience Now</string>
    <string name="FD">FD</string>
    <string name="FS">FS</string>
    <string name="FW">FW</string>
    <string name="Font_Size">Font Size</string>
    <string name="Forward">Forward</string>
    <string name="GD">GD</string>
    <string name="Get_GIF_From_Album">Get GIF From Album</string>
    <string name="Get_Pictures_From_Album">Get Pictures From Album</string>
    <string name="Graffiti">Graffiti</string>
    <string name="Hot">Hot</string>
    <string name="LED">LED</string>
    <string name="Language">Language</string>
    <string name="Material_Library">Material Library</string>
    <string name="Month">M</string>
    <string name="No_Equipment">No equipment, please pull down to refresh</string>
    <string name="No_Style">No Style</string>
    <string name="Other">Other</string>
    <string name="Pixel">Pixel</string>
    <string name="Pull_down_to_refresh_device">Pull down to refresh device</string>
    <string name="RGB">RGB</string>
    <string name="RandomPlay">RandomPlay</string>
    <string name="Read_Write_Failed">Failed to apply for read and write permissions</string>
    <string name="Read_Write_Required">Read and write permissions are required, please open the settings to enable the corresponding permissions</string>
    <string name="Read_Write_Success">The application for read and write permissions is successful</string>
    <string name="Repeat">Repeat</string>
    <string name="Reverse">Reverse</string>
    <string name="Send_Failed">Send Failed</string>
    <string name="Sending">Sending</string>
    <string name="Sendtiming">Send timing</string>
    <string name="SequentialPlay">SequentialPlay</string>
    <string name="SinglePlay">SinglePlay</string>
    <string name="Style">Style</string>
    <string name="Suggest">Sug</string>
    <string name="Tab_Effect">Effect</string>
    <string name="Text">Text</string>
    <string name="Text_Color">Text Color</string>
    <string name="The_password_cannot_be_the_ame_number_or_letter">The password cannot be the same number or letter</string>
    <string name="The_system_is_not_in_breathing_mode_yet">The system is not in breathing mode yet</string>
    <string name="Turn_Off">Turn Off</string>
    <string name="Turn_On">Turn On</string>
    <string name="Tutorial">Tutorial</string>
    <string name="Values_can_be_the_same">Values cannot be the same</string>
    <string name="Voicecontrol">Voice</string>
    <string name="Wiring">Wiring</string>
    <string name="Year">Y</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="ablum_title">music name:%1$s from artist:%2$s Album: %3$s</string>
    <string name="about_us_and_help">About us</string>
    <string name="access_request">Access Request</string>
    <string name="access_request_description">Since Android 6.0, to scan low-power Bluetooth devices, applications need to have access to the device location. This is because Bluetooth beacons can be used to determine the location of mobile phones and users. However, this application does not use your location information. This permission is only for scanning Bluetooth devices. [Click to view the official Google documentation]</string>
    <string name="access_request_description1">Since Android 6.0, to scan low-power Bluetooth devices, applications need to have access to the device location. This is because Bluetooth beacons can be used to determine the location of mobile phones and users. However, this application does not use your location information. This permission is only for scanning Bluetooth devices.</string>
    <string name="access_request_description2">[Click to view the official Google documentation]</string>
    <string name="account_format_error">The authentication method is incorrectly formatted</string>
    <string name="accumulation">AC</string>
    <string name="action_settings">Settings</string>
    <string name="add2lib">Confirm select</string>
    <string name="add2lib_all">Select all</string>
    <string name="addTimer">Add Timer</string>
    <string name="add_device">Add Device</string>
    <string name="add_device_successfully">add the device successfully</string>
    <string name="add_group">add new group</string>
    <string name="adding_device">is adding equipment</string>
    <string name="agree">Agree</string>
    <string name="aisle_a">Aisle A</string>
    <string name="aisle_b">Aisle B</string>
    <string name="aisle_c">Aisle C</string>
    <string name="all_off">all off</string>
    <string name="all_on">all on</string>
    <string name="allcomment">All comments</string>
    <string name="app_name">LED LAMP</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="aquatic_mode">Aquatic Mode</string>
    <string name="authorization_alert">This function requires authorization from you, Otherwise APP will not be used properly.</string>
    <string name="authorization_title">Tips:</string>
    <string name="b">B</string>
    <string name="back">BACK</string>
    <string name="base_setting">Setitng</string>
    <string name="battery">Battery</string>
    <string name="bga_pp_all_image">所有图片</string>
    <string name="bga_pp_choose">选择</string>
    <string name="bga_pp_confirm">确定</string>
    <string name="bga_pp_crop_not_support">当前设备不支持裁剪图片</string>
    <string name="bga_pp_download_img_failure">下载到图片失败</string>
    <string name="bga_pp_photo_not_support">当前设备不支持发送图片</string>
    <string name="bga_pp_save_img_failure">无法连接到服务器，请检查你的网络或稍后重试!</string>
    <string name="bga_pp_save_img_success_folder">图片已保存至 %s 文件夹</string>
    <string name="bga_pp_take_picture">拍摄照片</string>
    <string name="bga_pp_toast_photo_picker_max">最多只能选择 %1$d 张图片</string>
    <string name="bga_pp_view_photo">查看图片</string>
    <string name="bind_end">Confirm</string>
    <string name="ble_connect">Bluetooth</string>
    <string name="ble_not_supported">Not support Device</string>
    <string name="blue">%1$s</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="breathe">Breathe</string>
    <string name="brightness">Brightness</string>
    <string name="brightness_set">Brightness: %1$s</string>
    <string name="btn_pix_number">number</string>
    <string name="btn_set_pix_number">setpix</string>
    <string name="btquery">Temperature battery inquiry</string>
    <string name="busy_wait">I\'m busy, wait</string>
    <string name="c">C</string>
    <string name="camera_permissions_disabled">Camera permissions are disabled, please be sure to enable camera permissions!</string>
    <string name="can_not_connect">May be wrong WIFI, Reconnect 3 seconds later or reselect other WIFI!</string>
    <string name="cancel">cancelled</string>
    <string name="cancel_welcome">Cancel Welcome</string>
    <string name="cancell">Cancell</string>
    <string name="cancell_dialog">CANCEL</string>
    <string name="chose">Please select short video</string>
    <string name="clear">Clear</string>
    <string name="comment_publish">published</string>
    <string name="comment_title">headline</string>
    <string name="five">Fri</string>
    <string name="forum">Forum</string>
    <string name="four">Thu</string>
    <string name="get_checkcode">Get the verification code</string>
    <string name="light_code">Address Code</string>
    <string name="login">login</string>
    <string name="logout">exit login</string>
    <string name="main_tab_text_service">LED LAMP</string>
    <string name="ok">OK</string>
    <string name="one">Mon</string>
    <string name="p_explain">Graphic Explanation</string>
    <string name="phone_or_email">mobile phone number or email address</string>
    <string name="query">Query</string>
    <string name="register">registered</string>
    <string name="register_account">account number:</string>
    <string name="register_checkcode">verification code:</string>
    <string name="register_email">authentication method:</string>
    <string name="register_password">Password:</string>
    <string name="sendvideo">Send Video</string>
    <string name="set_pix_number">Set the address code (0-512)</string>
    <string name="seven">Sun</string>
    <string name="six">Sta</string>
    <string name="six_eighteen_length">6~18 numeric alphabet</string>
    <string name="six_number">6 digits</string>
    <string name="text_cancel">CANCEL</string>
    <string name="text_edit">Edit</string>
    <string name="text_pick_camera">Taking pictures</string>
    <string name="text_pick_local">Gallery</string>
    <string name="three">Wed</string>
    <string name="time">time</string>
    <string name="timingquery">Timing query</string>
    <string name="two">Tue</string>
    <string name="update_password">modify password</string>
    <string name="video_explain">Video Explanation</string>
</resources>