<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:background="@color/blue" android:layout_width="match_parent" android:layout_height="match_parent">
    <RelativeLayout android:id="@+id/relativeLayoutHeader" android:background="@color/black" android:layout_width="match_parent" android:layout_height="@dimen/dp_45">
        <Button android:id="@+id/buttonCancell" android:background="@drawable/back_nomal" android:layout_width="@dimen/dp_45" android:layout_height="@dimen/dp_40" android:layout_centerVertical="true"/>
        <TextView android:textSize="@dimen/text_size7" android:textColor="@color/white" android:gravity="center" android:id="@+id/textViewID" android:layout_width="wrap_content" android:layout_height="match_parent" android:text="@string/timingquery" android:layout_centerHorizontal="true"/>
        <TextView android:textSize="@dimen/text_size6" android:textColor="@color/white" android:id="@+id/tvQuery" android:background="@android:color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/dp_10" android:text="@string/query" android:layout_alignParentRight="true" android:layout_centerVertical="true"/>
    </RelativeLayout>
    <RelativeLayout android:gravity="center" android:background="@color/blue" android:layout_width="match_parent" android:layout_height="@dimen/tab_height">
        <TextView android:textColor="@color/black" android:gravity="center" android:id="@+id/bt_19" android:background="@color/white" android:layout_width="@dimen/dp_40" android:layout_height="@dimen/dp_40" android:text="@string/seven"/>
        <TextView android:textColor="@color/black" android:gravity="center" android:id="@+id/bt_29" android:background="@color/white" android:layout_width="@dimen/dp_40" android:layout_height="@dimen/dp_40" android:text="@string/one" android:layout_marginStart="@dimen/dp_40"/>
        <TextView android:textColor="@color/black" android:gravity="center" android:id="@+id/bt_39" android:background="@color/white" android:layout_width="@dimen/dp_40" android:layout_height="@dimen/dp_40" android:text="@string/two" android:layout_marginStart="@dimen/dp_80"/>
        <TextView android:textColor="@color/black" android:gravity="center" android:id="@+id/bt_49" android:background="@color/white" android:layout_width="@dimen/dp_40" android:layout_height="@dimen/dp_40" android:text="@string/three" android:layout_marginStart="@dimen/dp_120"/>
        <TextView android:textColor="@color/black" android:gravity="center" android:id="@+id/bt_59" android:background="@color/white" android:layout_width="@dimen/dp_40" android:layout_height="@dimen/dp_40" android:text="@string/four" android:layout_marginStart="@dimen/dp_160"/>
        <TextView android:textColor="@color/black" android:gravity="center" android:id="@+id/bt_69" android:background="@color/white" android:layout_width="@dimen/dp_40" android:layout_height="@dimen/dp_40" android:text="@string/five" android:layout_marginStart="@dimen/dp_200"/>
        <TextView android:textColor="@color/black" android:gravity="center" android:id="@+id/bt_79" android:background="@color/white" android:layout_width="@dimen/dp_40" android:layout_height="@dimen/dp_40" android:text="@string/six" android:layout_marginStart="@dimen/dp_240"/>
    </RelativeLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="@dimen/dp_40">
        <TextView android:textSize="@dimen/text_size3" android:textColor="@color/white" android:gravity="center" android:background="@color/transparent" android:layout_width="0dp" android:layout_height="40dp" android:text="ID" android:layout_weight="1"/>
        <TextView android:textSize="@dimen/text_size3" android:textColor="@color/white" android:gravity="center" android:background="@color/transparent" android:layout_width="0dp" android:layout_height="40dp" android:text="@string/time" android:layout_weight="1"/>
        <RelativeLayout android:id="@+id/rl_Red" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1">
            <View android:tag="viewColor1" android:background="@drawable/color_block_bright_red" android:layout_width="20dp" android:layout_height="20dp" android:layout_centerInParent="true"/>
        </RelativeLayout>
        <RelativeLayout android:id="@+id/rl_Green" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1">
            <View android:tag="viewColor2" android:background="@drawable/color_block_bright_green" android:layout_width="20dp" android:layout_height="20dp" android:layout_centerInParent="true"/>
        </RelativeLayout>
        <RelativeLayout android:id="@+id/rl_Blue" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1">
            <View android:tag="viewColor3" android:background="@drawable/color_block_bright_lightblue" android:layout_width="20dp" android:layout_height="20dp" android:layout_centerInParent="true"/>
        </RelativeLayout>
        <RelativeLayout android:id="@+id/rl_White" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1">
            <View android:tag="viewColor4" android:background="@drawable/color_block_bright_white" android:layout_width="20dp" android:layout_height="20dp" android:layout_centerInParent="true"/>
        </RelativeLayout>
        <RelativeLayout android:id="@+id/rl_Cyan" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1">
            <View android:tag="viewColor5" android:background="@drawable/color_block_bright_crystal" android:layout_width="20dp" android:layout_height="20dp" android:layout_centerInParent="true"/>
        </RelativeLayout>
        <RelativeLayout android:id="@+id/rl_Purple" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1">
            <View android:tag="viewColor6" android:background="@drawable/color_block_bright_pink" android:layout_width="20dp" android:layout_height="20dp" android:layout_centerInParent="true"/>
        </RelativeLayout>
    </LinearLayout>
    <ListView android:id="@+id/list_item5" android:layout_width="match_parent" android:layout_height="wrap_content"/>
</LinearLayout>
