<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_gravity="center_vertical" android:background="@color/blue" android:layout_width="match_parent" android:layout_height="@dimen/tab_heght">
    <Button android:textSize="@dimen/textsize_nav_bar" android:textColor="@android:color/white" android:gravity="center" android:id="@+id/btnNavLeft" android:background="@android:color/transparent" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/navbar_marginLeft" android:text="@string/text_edit" android:layout_alignParentLeft="true" android:layout_centerVertical="true"/>
    <TextView android:textSize="@dimen/textsize_nav_bar" android:textStyle="bold" android:textColor="@android:color/white" android:gravity="center" android:id="@+id/textViewNavCenter" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/main_tab_text_service" android:layout_centerInParent="true"/>
    <ImageButton android:gravity="center" android:id="@+id/imageViewNavRight" android:background="@drawable/abcd" android:layout_width="@dimen/nav_img_size" android:layout_height="@dimen/nav_img_size" android:layout_marginRight="@dimen/navbar_marginRight" android:layout_alignParentRight="true" android:layout_centerVertical="true"/>
    <LinearLayout android:id="@+id/linear" android:visibility="gone" android:layout_width="match_parent" android:layout_height="45dp">
        <TextView android:textSize="@dimen/textsize_nav_bar" android:textColor="@android:color/white" android:gravity="center" android:id="@+id/tv1" android:layout_width="wrap_content" android:layout_height="match_parent" android:text="@string/video_explain" android:layout_weight="1"/>
        <TextView android:background="@color/white" android:layout_width="1dp" android:layout_height="match_parent"/>
        <TextView android:textSize="@dimen/textsize_nav_bar" android:textColor="@android:color/white" android:gravity="center" android:id="@+id/tv2" android:layout_width="wrap_content" android:layout_height="match_parent" android:text="@string/p_explain" android:layout_weight="1" android:layout_centerVertical="true"/>
    </LinearLayout>
    <RelativeLayout android:id="@+id/login" android:visibility="gone" android:layout_width="match_parent" android:layout_height="match_parent">
        <TextView android:textSize="@dimen/textsize_nav_bar" android:textColor="@android:color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/forum" android:layout_centerHorizontal="true" android:layout_centerVertical="true"/>
    </RelativeLayout>
</RelativeLayout>
