<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:background="@color/white" android:layout_width="match_parent" android:layout_height="match_parent">
    <RelativeLayout android:background="@color/blue" android:layout_width="match_parent" android:layout_height="@dimen/dp_48">
        <ImageView android:id="@+id/ivBack12" android:layout_width="48dp" android:layout_height="match_parent" android:src="@drawable/back_nomal" android:scaleType="centerInside"/>
        <TextView android:textSize="18sp" android:textColor="@color/white" android:id="@+id/tvTitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sendvideo" android:layout_centerInParent="true"/>
        <TextView android:textSize="18sp" android:textColor="@color/white" android:id="@+id/clear2" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/dp_20" android:text="@string/clear" android:layout_alignParentRight="true" android:layout_centerVertical="true"/>
    </RelativeLayout>
    <LinearLayout android:orientation="vertical" android:padding="16dp" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginTop="@dimen/dp_58" android:layout_above="@+id/btn_Publish" android:layout_alignParentStart="true">
        <EditText android:textColor="@color/black" android:textColorHint="@color/grayDark" android:id="@+id/etTitle12" android:background="@null" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/comment_title" android:singleLine="true"/>
        <TextView android:background="@color/gray_line_bg" android:layout_width="match_parent" android:layout_height="0.5dp" android:layout_marginTop="4dp"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_50" android:text="@string/chose"/>
        <RelativeLayout android:layout_gravity="center" android:layout_width="match_parent" android:layout_height="@dimen/dp_200" android:layout_marginTop="@dimen/dp_30">
            <androidx.recyclerview.widget.RecyclerView android:id="@+id/recycler" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="5dp" android:layout_marginTop="5dp" android:overScrollMode="never"/>
        </RelativeLayout>
    </LinearLayout>
    <Button android:textColor="@color/white" android:id="@+id/btn_Publish" android:background="@drawable/bottom_border" android:layout_width="match_parent" android:layout_height="@dimen/dp_50" android:layout_marginLeft="@dimen/dp_20" android:layout_marginRight="@dimen/dp_20" android:layout_marginBottom="@dimen/dp_10" android:text="@string/comment_publish" android:layout_alignParentBottom="true"/>
</RelativeLayout>
